[package]
name = "pipe-channel"
version = "1.2.0"
authors = ["Sergey Bugaev <bugaevc@gmail.com>"]
license = "MIT"

description = "Channel implementation based on pipes"
keywords = ["pipe", "channel"]

documentation = "https://docs.rs/pipe-channel/"
repository = "https://github.com/bugaevc/pipe-channel"

[dependencies]
nix = "0.8.1"
libc = "0.2.22"
